# kaly2ios

./: .bazelrc  .bazelversion  .gitignore  .swiftformat  BUILD  BUILD.bazel  Config.xcconfig  Dummy.swift  Everywhere.xcconfig  Info.plist  Kaly2Modulemap.modulemap  Mintfile  Pods.WORKSPACE  README.md  WORKSPACE  bazel  bazel-bin  bazel-kaly2ios  bazel-out  bazel-testlogs  bazel.sh  build.sh  buildbuddy.yaml  external  format.sh  launchGUI.sh  lintformat.sh  openInXcode.sh  swiftniorepo.bzl  test.sh  xchammer.yml
.github/workflows/: CI.yml
Kaly2iOS/: Mintfile  genBindings.sh  xchammer.yml
Kaly2iOS/Common/: BUILD  BUILD.bazel
Kaly2iOS/Common/Sources/Common/: Utils.swift
Kaly2iOS/Common/Sources/Common/CommonIOS.docc/: CommonIOS.md
Kaly2iOS/Common/Sources/CommonAPI/: CommonIOSAPI.h
Kaly2iOS/Common/Sources/CommonAPI/Classes/: Lock.swift
Kaly2iOS/Common/Tests/CommonTests/: CommonTests.swift
Kaly2iOS/CommonIOS/: CommonIOS.h
Kaly2iOS/CommonIOSAPI/: CommonIOSAPI.h
Kaly2iOS/CommonIOSTests/: CommonIOSTests.swift
Kaly2iOS/CommonMacOS/: CommonMacOS.h
Kaly2iOS/CommonMacOSAPI/: CommonMacOSAPI.h
Kaly2iOS/CommonMacOSTests/: CommonMacOSTests.swift
Kaly2iOS/Data/: BUILD.bazel
Kaly2iOS/Data/Sources/Data/: Constants.swift  DataModule.swift  GRPCChannelFactory.swift  GRPCClientConfigurer.swift
Kaly2iOS/Data/Sources/Data/Cleanse/: DataModule.swift  StubDataModule.swift
Kaly2iOS/Data/Sources/Data/Clients/: MapClientImpl.swift  RobotClientImpl.swift  SessionClientImpl.swift
Kaly2iOS/Data/Sources/Data/Clients/Models/: IterationEntity+Extensions.swift  PoseEntity+Extensions.swift  SubscribeResponseEntity+Extensions.swift  SubscribeResponseImpl.swift
Kaly2iOS/Data/Sources/Data/Repositories/: LastErrorTimeRepoImpl.swift  OpenRobotSessionRepoImpl.swift  RobotSessionIDRepoImpl.swift
Kaly2iOS/Data/Sources/Data/StubData/Repositories/: StubLastErrorTimeImpl.swift  StubOpenRobotSessionRepoImpl.swift
Kaly2iOS/Data/Sources/DataAPI/Protocols/: SessionClient.swift  SubscribeResponse.swift
Kaly2iOS/Data/Sources/DataAPI/Protocols/Clients/: SessionClient.swift
Kaly2iOS/Data/Sources/PreviewData/: PreviewData.swift
Kaly2iOS/Data/Tests/DataTests/: DataTests.swift
Kaly2iOS/DataIOSAPITests/: DataIOSAPITests.swift
Kaly2iOS/DataMacOSTests/: DataMacOSTests.swift
Kaly2iOS/Domain/: BUILD.bazel
Kaly2iOS/Domain/Sources/Domain/: ChangeRobotSettingsUseCase.swift  ChangeSlamSettingsUseCase.swift  DomainModule.swift  NewMapUseCase.swift  NewRobotUseCase.swift  NewSimulationUseCase.swift  SeeMapUseCase.swift  SubscribeSimulationUseCase.swift  ViewMapsUseCase.swift  ViewRobotsUseCase.swift
Kaly2iOS/Domain/Sources/Domain/Cleanse/: DomainModule.swift
Kaly2iOS/Domain/Sources/Domain/Protocols/Clients/: MapClient.swift  RobotClient.swift  SessionClient.swift
Kaly2iOS/Domain/Sources/Domain/Protocols/Clients/Models/: SubscribeResponseData.swift
Kaly2iOS/Domain/Sources/Domain/Protocols/Repositories/: RobotSessionIDRepo.swift
Kaly2iOS/Domain/Sources/DomainAPI/: DomainAPI.h
Kaly2iOS/Domain/Tests/DomainTests/: DomainTests.swift
Kaly2iOS/Kaly2iOS.xcodeproj/: project.pbxproj
Kaly2iOS/MainApp/: AppModule.swift  BUILD  BUILD.bazel  MainAppViewModel.swift
Kaly2iOS/MainApp/Sources/MainApp/: AppAPI.swift  Kaly2iOSApp.swift  MainAppModule.swift
Kaly2iOS/MainApp/Tests/MainAppTests/: Tests_iOS.swift  Tests_iOSLaunchTests.swift
Kaly2iOS/Presentation/: BUILD.bazel  Presentation.h
Kaly2iOS/Presentation/Sources/Presentation/: ContainerView.swift  PresentationModule.swift
Kaly2iOS/Presentation/Sources/Presentation/BottomSheetComponent/: BottomSheetView.swift
Kaly2iOS/Presentation/Sources/Presentation/Cleanse/: PresentationComponent.swift  PresentationModule.swift
Kaly2iOS/Presentation/Sources/Presentation/Components/: MainAppComponent.swift  MainAppView.swift  MainAppViewModel.swift
Kaly2iOS/Presentation/Sources/Presentation/Components/InsideBottomSheetComponent/: InsideBottomSheetViewModel.swift
Kaly2iOS/Presentation/Sources/Presentation/Components/MainAppComponent/InsideBottomSheetComponent/: InsideBottomSheetViewModel.swift
Kaly2iOS/Presentation/Sources/Presentation/Components/MainAppComponent/MapComponent/: MapViewModel.swift
Kaly2iOS/Presentation/Sources/Presentation/Components/MapComponent/: MapView.swift  MapViewModel.swift
Kaly2iOS/Presentation/Sources/Presentation/Components/MapContentsViewComponent/: MapContentsView.swift  MapContentsViewRepresentable.swift
Kaly2iOS/Presentation/Sources/Presentation/Components/SharedGeneral/BottomSheetComponent/: BottomSheetView.swift
Kaly2iOS/Presentation/Sources/Presentation/Extensions/: CGPoint+Extensions.swift  UIBezierPath+Extensions.swift
Kaly2iOS/Presentation/Sources/Presentation/InsideBottomSheetComponent/: InsideBottomSheetView.swift
Kaly2iOS/Presentation/Sources/Presentation/MainAppComponent/: MainAppView.swift  MainAppViewModel.swift
Kaly2iOS/Presentation/Sources/Presentation/MapComponent/: MapView.swift  MapViewModel.swift
Kaly2iOS/Presentation/Sources/Presentation/Protocols/: MainAppViewProto.swift
Kaly2iOS/Presentation/Sources/Presentation/Screens/MainAppScreen/: MainAppScreenView.swift  MainAppScreenViewModel.swift
Kaly2iOS/Presentation/Sources/PresentationAPI/: PresentationAPI.h
Kaly2iOS/Presentation/Sources/PresentationAPI/PresentationAPI.docc/: PresentationAPI.md
Kaly2iOS/Presentation/Sources/PresentationAPI/Protocols/: MainAppView.swift
Kaly2iOS/Presentation/Sources/PresentationAPI/Structs/: ContainerView.swift
Kaly2iOS/Presentation/Tests/PresentationAPITests/: PresentationAPITests.swift
Kaly2iOS/Presentation/Tests/PresentationTests/: PresentationTests.swift
Kaly2iOS/Presentation/Tests/PresentationTests/Components/MainAppComponent/MapComponent/: MapViewModelTests.swift
Kaly2iOS/Presentation/Tests/PresentationTests/MapComponent/: MapViewModelTests.swift
Kaly2iOS/Scripts/: genGRPCBindings.sh
Kaly2iOS/Shared/: AppModule.swift  (+2 more)
TulsiDoc.tulsiproj/: joel.tulsiconf-user  project.tulsiconf
kaly2ios.xcworkspace/: contents.xcworkspacedata
tools/: XCHammerIndexImportAction.sh
(+80 files in other folders)
