# BUILD.Bazel
#load("@xchammer//:xcodeproject.bzl", "xcode_project")

# load(
#     "@xchammer//:xcodeproject.bzl",
#     "xcode_project",
#     "execution_action",
#     "project_config",
#     "scheme_action_config",
#     "target_config",
# )

# load("@xchammer//:xcodeproject.bzl", "xcode_project")


load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application", "ios_unit_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@com_github_buildbuddy_io_rules_xcodeproj//xcodeproj:xcodeproj.bzl", "xcodeproj")


XCODEPROJ_TARGETS = [
    "//:ios-app",
    # "//Example",
    # "//ExampleTests",
    # "//ExampleObjcTests",
    # "//ExampleUITests",
    "//Kaly2iOS/Common:common-tests",
    "//Kaly2iOS/Domain:domain-tests",
    "//Kaly2iOS/Presentation:presentation-tests",
]
xcodeproj(
    name = "xcodeproj",
    project_name = "iOS App",
    # tags = ["manual"],
    targets = XCODEPROJ_TARGETS,

    build_mode = "xcode",
    # build_mode = "bazel",
)


alias(
    name = "swiftlint",
    actual = "@grpc-swift-repo//:protoc-gen-grpc-swift",
)

ios_application(
    name = "ios-app",
    bundle_id = "ca.joelathiessen.kaly2",
    families = ["iphone"],
    infoplists = ["Info.plist"],
    minimum_os_version = "15.0",
    # visibility = ["//swift:__subpackages__"],
    deps = [
            "//Kaly2iOS/MainApp:main-app",
    ],
)
ios_application(
    name = "ios-app-h",
    bundle_id = "ca.joelathiessen.kaly2",
    families = ["iphone"],
    infoplists = ["Info.plist"],
    minimum_os_version = "15.0",
    visibility = ["//visibility:public"],
    deps = [":ios-app-main"],
)

swift_library(
    name = "ios-app-main",
    srcs = [
        "Dummy.swift",
    ],
    visibility = ["//visibility:public"],
)

