load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application", "ios_unit_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@com_github_buildbuddy_io_rules_xcodeproj//xcodeproj:defs.bzl", "top_level_target", "xcode_schemes", "xcodeproj")

xcodeproj(
    name = "xcodeproj",
    # build_mode = "xcode",
    build_mode = "bazel",
    project_name = "XcodeBazel",
    schemes = [
        xcode_schemes.scheme(
            name = "Kaly2",
            build_action = xcode_schemes.build_action([
                xcode_schemes.build_target(
                    ":ios-app",
                    xcode_schemes.build_for(archiving = True),
                ),
            ]),
            launch_action = xcode_schemes.launch_action(
                ":ios-app",
                env = {"CUSTOM_ENV_VAR": "hello"},
            ),
            test_action = xcode_schemes.test_action(
                [
                    "//Kaly2iOS/Presentation:presentation-tests-dynamic",
                    "//Kaly2iOS/Domain:domain-tests",
                    # "//Kaly2iOS/Data:data-tests",
                ],
                env = {"CUSTOM_ENV_VAR": "hello"},
            ),
        ),
    ],
    tags = ["manual"],
    # scheme_autogeneration_mode = "all",
    top_level_targets = [
        top_level_target(":ios-app"),
        top_level_target("//Kaly2iOS/Presentation:presentation-tests-dynamic"),
        top_level_target("//Kaly2iOS/Domain:domain-tests"),
    ],
)

ios_application(
    name = "ios-app",
    bundle_id = "ca.joelathiessen.kaly2",
    families = ["iphone"],
    frameworks = ["//Kaly2iOS/Presentation:presentation-dynamic"],
    infoplists = ["Info.plist"],
    minimum_os_version = "15.0",
    deps = [
        "//Kaly2iOS/MainApp:main-app",
    ],
)

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
)

test_suite(
    name = "ci_tests",
    tags = ["-xcode"],
    tests = [
        "//Kaly2iOS/Data:data-tests",
        "//Kaly2iOS/Domain:domain-tests",
        "//Kaly2iOS/Presentation:presentation-tests",
    ],
)
