load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_test")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")

swift_library(
    name = "common",
    module_name = "Common",
    srcs = glob(["Sources/Common/**/*.swift"]),
    visibility = ["//visibility:public"],
    deps = [],
)

# swift_library(
#     name = "common-test-utils",
#     module_name = "CommonTestUtils",
#     visibility = ["//visibility:public"],
#     deps = [],
# )

swift_library(
    name = "common-tests-lib",
    srcs = glob(["Tests/CommonTests/**/*.swift"]),
    visibility = ["//visibility:public"], # for now...
    deps = [":common"],
)

ios_unit_test(
    name = "common-tests",
    size = "medium",
    minimum_os_version = "15.0",
    visibility = ["//visibility:public"],
    deps = [":common-tests-lib"]
)
