
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

grpc_stubs = [
        "Sources/Data/Protos/MapService.grpc.swift",
        "Sources/Data/Protos/RobotService.grpc.swift",
        "Sources/Data/Protos/SessionService.grpc.swift"
      ]
proto_models = [
        "Sources/Data/Protos/MapService.pb.swift",
        "Sources/Data/Protos/RobotService.pb.swift",
        "Sources/Data/Protos/SessionService.pb.swift"
]
tools = ["@protobuf//:protoc", "@grpc-swift-repo//:protoc-gen-grpc-swift", "@swift-protobuf-repo//:protoc-gen-swift"]
protos = glob([
        "**/*.proto",
    ])

swift_library(
    name = "data",
    srcs = glob([
        "Sources/Data/Clients/**/*.swift",
        "Sources/Data/Repositories/**/*.swift",
        "Sources/Data/*.swift",
        "Sources/Data/Cleanse/*.swift"
    ]) + grpc_stubs + proto_models,
    visibility = ["//visibility:public"],
    module_name = "Data",
    deps = ["@grpc-swift-repo//:GRPC",
    "@cleanse-repo//:Cleanse",
    "//Kaly2iOS/Domain:domain"
    ],
    tags = ["xchammer"],
    # data = [":grpc_stubs"]
)

genrule(
    name = "grpc_stubs",
    outs = grpc_stubs,
    cmd = """
    $(location @protobuf//:protoc) \
    --plugin=$(location @grpc-swift-repo//:protoc-gen-grpc-swift) \
    --grpc-swift_out=Client=true,ExperimentalAsyncClient=true:$(GENDIR) \
    --proto_path=. $(SRCS)
    """,
    srcs = protos,
    tools = tools,
    tags = ["xchammer"],
)

genrule(
    name = "proto_models",
    outs = proto_models,
    cmd = """
    $(location @protobuf//:protoc) \
    --plugin=$(location @swift-protobuf-repo//:protoc-gen-swift) \
    --swift_out=$(GENDIR) \
    --proto_path=. $(SRCS)
    """,
    srcs = protos,
    tools = tools,
    tags = ["xchammer"],
)
