load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")

swift_library(
    name = "domain",
    module_name = "Domain",
    srcs = glob(["Sources/Domain/**/*.swift"]),
    visibility = ["//visibility:public"],
    deps = [
            "//Kaly2iOS/Common:common",
            "@cleanse-repo//:Cleanse"
            ],
)

swift_library(
    name = "domain-tests-lib",
    module_name = "DomainTests",
    srcs = glob(["Tests/DomainTests/**/*.swift"]),
    testonly = True,
    deps = [
            "//Kaly2iOS/Common:common",
            "domain",
            "domain-mocks",
            "@cleanse-repo//:Cleanse"
    ],
)

ios_unit_test(
    name = "domain-tests",
    size = "medium",
    minimum_os_version = "15.0",
    visibility = ["//visibility:public"],
    deps = [":domain-tests-lib"]
)

swift_library(
    name = "domain-mocks",
    module_name = "DomainMocks",
    srcs = ["Generated/GeneratedDomainMocks.swift"],
    visibility = ["//visibility:public"],
    deps = [
        # "domain-mocks-gen",
        "domain",
        "@cleanse-repo//:Cleanse",
    ],
)
genrule(
    name = "domain-mocks-gen",
    srcs = glob(["Sources/Domain/**/*.swift"]),
    outs = ["Generated/GeneratedDomainMocks.swift"],
    cmd = "mint run mockolo -srcs $(SRCS) -d $@ -i Domain",
    visibility = ["//visibility:public"],
    # tools = ["@mockolo//:mockolo"],
)

ios_framework(
    name = "DomainFramework.iOS",
    extension_safe = True,
    bundle_id = "ca.joelathiessen.kaly2.domain",
    families = ["iphone"],
    # frameworks = ["//Kaly2iOS/Domain:DomainFramework.iOS"],
    # frameworks = ["//Lib:LibFramework.iOS"],
    infoplists = ["Info.plist"],
    minimum_os_version = "15.0",
    # version = "//iOSApp:Version",
    visibility = ["//visibility:public"],
    deps = ["//Kaly2iOS/Domain:domain"],
)