load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    # module_name = "iOSApp",
    name = "main-app",
        # name = "iOSApp.library",
    srcs = glob(["Sources/**/*.swift"]),
    # data = [":ExampleLibraryResourceGroup"] + select({
    #     ":release_build": [],
    #     "//conditions:default": [":PreviewContent"],
    # }),
    visibility = ["//visibility:public"],
    deps = [
            "//Kaly2iOS/Presentation:presentation-dynamic",
        # "//Kaly2iOS/Presentation:presentation",
            "//Kaly2iOS/Domain:domain",
            "//Kaly2iOS/Data:data",
            "//Kaly2iOS/Common:common",
            "@cleanse-repo//:Cleanse",
            ],
)

# apple_resource_group(
#     name = "ExampleLibraryResourceGroup",
#     resources = ["//iOSApp/Resources/ExampleResources"],
# )

# filegroup(
#     name = "PreviewContent",
#     srcs = glob(["PreviewContent/**"]),
# )