load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application", "ios_unit_test")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_dynamic_framework", "ios_framework")

swift_library(
    name = "presentation",
    srcs = glob(["Sources/Presentation/**/*.swift"]),
    module_name = "Presentation",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//Kaly2iOS/Common:common",
        "//Kaly2iOS/Domain:domain",
        "//Kaly2iOS/Domain:domain-mocks",
        "@cleanse-repo//:Cleanse",
    ],
    # alwayslink = True,
)

ios_dynamic_framework(
    name = "presentation-dynamic",
    bundle_id = "ca.joelathiessen.kaly2.presentation",
    bundle_name = "Presentation",
    families = ["iphone"],
    infoplists = ["Info.plist"],
    minimum_os_version = "15.0",
    visibility = ["//visibility:public"],
    # module_name = "Presentation",
    deps = [
        "presentation",
    ],
)

swift_library(
    name = "presentation-tests-lib",
    testonly = True,
    srcs = glob(["Tests/PresentationTests/**/*.swift"]),
    module_name = "PresentationTests",
    tags = ["manual"],
    deps = [
        # Works for Xcode previews if this is set:
        # ":presentation-dynamic",

        # Works for command-line tests (./test.sh) if this is set:
        ":presentation",
        #
        "//Kaly2iOS/Domain:domain-mocks",
    ],
)

swift_library(
    name = "presentation-tests-lib-dynamic",
    testonly = True,
    srcs = glob(["Tests/PresentationTests/**/*.swift"]),
    module_name = "PresentationTestsDynamic",
    tags = ["manual"],
    deps = [
        # Works for Xcode previews if this is set:
        ":presentation-dynamic",

        # Works for command-line tests (./test.sh) if this is set:
        # ":presentation",
        #
        "//Kaly2iOS/Domain:domain-mocks",
    ],
)

ios_unit_test(
    name = "presentation-tests",
    size = "medium",
    minimum_os_version = "15.0",
    visibility = ["//visibility:public"],
    deps = [":presentation-tests-lib"],
)

ios_unit_test(
    name = "presentation-tests-dynamic",
    size = "medium",
    minimum_os_version = "15.0",
    tags = ["xcode"],
    visibility = ["//visibility:public"],
    deps = [":presentation-tests-lib-dynamic"],
)
